--- a/muk_mail_branding/template/assets.xml
+++ b/muk_mail_branding/template/assets.xml
@@ -26,7 +26,7 @@
 
 <template id="assets_backend" name="assets_backend" inherit_id="web.assets_backend">
     <xpath expr="//script[last()]" position="after">
-		<script type="text/javascript" src="/muk_mail_branding/static/src/js/message.js" />
+<!--		<script type="text/javascript" src="/muk_mail_branding/static/src/js/message.js" />-->
 	</xpath>
 </template>
 
